--- a/src/echo/BUILD.bazel
+++ b/src/echo/BUILD.bazel
@@ -1,15 +1,8 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("@io_bazel_rules_docker//go:image.bzl", "go_image")
 
-go_library(
-    name = "go_default_library",
-    srcs = ["main.go"],
-    importpath = "github.com/sueken5/bazel-ex/src/echo",
-    visibility = ["//visibility:private"],
-    deps = ["//src/logger/go:go_default_library"],
-)
-
-go_binary(
+go_image(
     name = "echo",
-    embed = [":go_default_library"],
-    visibility = ["//visibility:public"],
+    srcs = ["main.go"],
+    importpath = "github.com/your/path/here",
+    deps = ["//src/logger/go:go_default_library"],
 )
